{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 15,
  "lineage": "f943c866-e06e-6c94-5a38-b41925ebfa47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0859a29bfb73bd49b",
            "domain": "vpc",
            "id": "eipalloc-0859a29bfb73bd49b",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-127-188-86.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.127.188.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "AWS-Elastic-IP"
            },
            "tags_all": {
              "Name": "AWS-Elastic-IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_backend_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caef02b518350c8b",
            "arn": "arn:aws:ec2:eu-central-1:025776661825:instance/i-03b38e96e6299481f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03b38e96e6299481f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-044b08740c2e2b44f",
            "private_dns": "ip-10-0-200-254.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.200.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c99f1ef6738e1ef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0513f87d24cf53e62",
            "tags": {
              "Name": "AWS_Backend-VM"
            },
            "tags_all": {
              "Name": "AWS_Backend-VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074ddd283c4ff904d"
            ]
          },
          "dependencies": [
            "aws_security_group.aws_backend_sg",
            "aws_subnet.aws_backend_subnet",
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_bastion_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0caef02b518350c8b",
            "arn": "arn:aws:ec2:eu-central-1:025776661825:instance/i-07402620801827015",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07402620801827015",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07a9585b2be914e82",
            "private_dns": "ip-10-0-100-62.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.62",
            "public_ip": "35.159.15.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e577e8728cc9eaf5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3bafac191462163",
            "tags": {
              "Name": "AWS-Bastion-VM"
            },
            "tags_all": {
              "Name": "AWS-Bastion-VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d241f1a689496ce5"
            ]
          },
          "dependencies": [
            "aws_security_group.aws_bastion_sg",
            "aws_subnet.aws_bastion_subnet",
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:025776661825:internet-gateway/igw-0540fab75e833b1b1",
            "id": "igw-0540fab75e833b1b1",
            "owner_id": "025776661825",
            "tags": {
              "Name": "AWS-Internet-Gateway"
            },
            "tags_all": {
              "Name": "AWS-Internet-Gateway"
            },
            "vpc_id": "vpc-05c1cbe90cb35891e"
          },
          "dependencies": [
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0859a29bfb73bd49b",
            "connectivity_type": "public",
            "id": "nat-06d57d409eae8f851",
            "network_interface_id": "eni-0ee8c4e8215373302",
            "private_ip": "10.0.100.101",
            "public_ip": "3.127.188.86",
            "subnet_id": "subnet-0f3bafac191462163",
            "tags": {
              "Name": "AWS-NAT-Gateway"
            },
            "tags_all": {
              "Name": "AWS-NAT-Gateway"
            }
          },
          "dependencies": [
            "aws_eip.aws_elastic_ip",
            "aws_subnet.aws_bastion_subnet",
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:025776661825:route-table/rtb-06516792257642324",
            "id": "rtb-06516792257642324",
            "owner_id": "025776661825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06d57d409eae8f851",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AWS-Private-Route-Table"
            },
            "tags_all": {
              "Name": "AWS-Private-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c1cbe90cb35891e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.aws_elastic_ip",
            "aws_nat_gateway.aws_nat_gateway",
            "aws_subnet.aws_bastion_subnet",
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aws_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:025776661825:route-table/rtb-0e0c2bfb5df147a59",
            "id": "rtb-0e0c2bfb5df147a59",
            "owner_id": "025776661825",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0540fab75e833b1b1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AWS-Public-Route-Table"
            },
            "tags_all": {
              "Name": "AWS-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c1cbe90cb35891e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws_internet_gateway",
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0437fc0c410287217",
            "route_table_id": "rtb-06516792257642324",
            "subnet_id": "subnet-0513f87d24cf53e62"
          },
          "dependencies": [
            "aws_eip.aws_elastic_ip",
            "aws_nat_gateway.aws_nat_gateway",
            "aws_route_table.aws_private_route_table",
            "aws_subnet.aws_backend_subnet",
            "aws_subnet.aws_bastion_subnet",
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046f8d7b1903381f0",
            "route_table_id": "rtb-0e0c2bfb5df147a59",
            "subnet_id": "subnet-0f3bafac191462163"
          },
          "dependencies": [
            "aws_internet_gateway.aws_internet_gateway",
            "aws_route_table.aws_public_route_table",
            "aws_subnet.aws_bastion_subnet",
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:025776661825:security-group/sg-074ddd283c4ff904d",
            "description": "test2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074ddd283c4ff904d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "chonjay21/ftps",
                "from_port": 60000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 60010
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ftp",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "mikatux/ftps-server",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3010
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "AWS-Security-group2",
            "name_prefix": "",
            "owner_id": "025776661825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS-Backend-SG"
            },
            "tags_all": {
              "Name": "AWS-Backend-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c1cbe90cb35891e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:025776661825:security-group/sg-0d241f1a689496ce5",
            "description": "test",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d241f1a689496ce5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "AWS-Security_group1",
            "name_prefix": "",
            "owner_id": "025776661825",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS-Bastion-SG"
            },
            "tags_all": {
              "Name": "AWS-Bastion-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c1cbe90cb35891e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_backend_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:025776661825:subnet/subnet-0513f87d24cf53e62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0513f87d24cf53e62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "025776661825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-Backend-Subnet"
            },
            "tags_all": {
              "Name": "AWS-Backend-Subnet"
            },
            "vpc_id": "vpc-05c1cbe90cb35891e"
          },
          "dependencies": [
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:025776661825:subnet/subnet-0f3bafac191462163",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3bafac191462163",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025776661825",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-Bastion-Subnet"
            },
            "tags_all": {
              "Name": "AWS-Bastion-Subnet"
            },
            "vpc_id": "vpc-05c1cbe90cb35891e"
          },
          "dependencies": [
            "aws_vpc.aws_vps_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vps_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:025776661825:vpc/vpc-05c1cbe90cb35891e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f65c1796278d0a33",
            "default_route_table_id": "rtb-03dadd6b70af46c78",
            "default_security_group_id": "sg-01887971d57f8c5b8",
            "dhcp_options_id": "dopt-0986dac20a05a98c5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05c1cbe90cb35891e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03dadd6b70af46c78",
            "owner_id": "025776661825",
            "tags": {
              "Name": "AWS-VPS-1"
            },
            "tags_all": {
              "Name": "AWS-VPS-1"
            }
          }
        }
      ]
    }
  ]
}